--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Homepage"
 description              : "Homepage. "
-repository               : "hlf404/longfeihuang.github.io"
+repository               : "hlf404/hlf404.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
