--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Homepage"
-description              : "黄龙飞.<br>PhD Student, NJUST"
+description              : "黄龙飞. PhD Student"
 repository               : "hlf404/hlf404.github.io"
 google_scholar_stats_use_cdn : true
 
