--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Homepage"
+title                    : "longfei-huang"
 description              : "黄龙飞. PhD Student"
 repository               : "hlf404/hlf404.github.io"
 google_scholar_stats_use_cdn : true
