--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Longfei Huang"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "NJUST"
+  bio              : "KMG, NJUST"
   location         : "Nanjing, China"
   employer         :
   pubmed           : 
